dnl Process this file with autoconf to produce a configure script.
dnl libb64: Base64 Encoding/Decoding Routines
AC_INIT([libb64],[1.2.1])
AM_INIT_AUTOMAKE([foreign])
AM_SILENT_RULES([yes])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AM_PROG_AR
AC_CONFIG_FILES([ src/Makefile base64/Makefile examples/Makefile include/Makefile Makefile ])
AC_OUTPUT
